# cmakeTutorial

./: README.md
t1/: CMakeLists.txt  README.md  main.cpp
t2/: CMakeLists.txt  COPYRIGHT  README.md
t2/doc/: DOChello.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt  README.md
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t4/: CMakeLists.txt  README.md
t4/src/: CMakeLists.txt  main.cpp
t5_step1_in_CMakeTutorial/: CMakeLists.txt  README.md  tutorial.cpp  tutorialConfig.h.in
