PROJECT(HELLO)
MESSAGE("SOURCE_DIR for HELLO " ${PROJECT_SOURCE_DIR})
MESSAGE("BINARY_DIR for HELLO " ${PROJECT_BINARY_DIR})
ADD_SUBDIRECTORY(src bin)


INSTALL(FILES COPYRIGHT README.md DESTINATION share/doc/cmake/t2)

INSTALL(PROGRAMS runhello.sh DESTINATION bin)

INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
